--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ fieldset legend {
 }
 
 fieldset h3 {
-  font-family: 'Staatliches';
+  font-family: 'Staatliches', cursive;
 
   font-weight: 400;
   font-size: 20px;
@@ -156,4 +156,44 @@ fieldset h3 {
 
 .date > div:nth-child(1) {
   width: 100%;
+}
+
+footer {
+  width: 750px;
+  height: 160px;
+  
+  background: #535971;
+  border-radius: 0px 0px 20px 20px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+footer .button {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin: 52px 71px;
+  padding: 15px 40px;
+  text-transform: uppercase;
+
+
+background: #FF5374;
+border-radius: 20px;
+
+font-family: 'Staatliches', cursive;
+font-weight: 400;
+font-size: 20px;
+line-height: 26px;
+
+color: #FFFFFF;
+}
+
+footer .button:hover {
+  background: #eb1943;;
+}
+
+input:invalid {
+  border: 1px solid red
 }
